--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=subshub
+
+# Logging
+logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
+logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVE:TRACE}
+
+# Database
+spring.datasource.driver-class-name=${DRIVER_CLASS}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.database-platform=${HIBERNATE_DIALECT}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=${JPA_SHOW_SQL}
+
+# Base url
+server.servlet.context-path=/api/v1
