added demo config for help

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,14 @@ spring.application.name=subshub
 logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 logging.level.org.springframework.security=${SPRING_SECURITY_LOG_LEVE:TRACE}
 # Database
-spring.datasource.driver-class-name=${DRIVER_CLASS}
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.jpa.database-platform=${HIBERNATE_DIALECT}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=${DATABASE_USERNAME:postgres}
+spring.datasource.password=${DATABASE_PASSWORD:postgres}
+spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=${JPA_SHOW_SQL}
+spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 # Base url
 server.servlet.context-path=/api/v1
+# JWT
+JWT_SECRET = ${JWT_SECRET:t9BXEIzc682tw9TY}
